--- a/index.html
+++ b/index.html
@@ -8,6 +8,32 @@
 </head>
 <body>
     <h1>Calculator</h1>
+    <section class="calculator-wrapper">
+        <input class="preview" />
+        <input class="maths" />
+
+        <button class="number">0</button>
+        <button class="number">1</button>
+        <button class="number">2</button>
+        <button class="number">3</button>
+        <button class="number">4</button>
+        <button class="number">5</button>
+        <button class="number">6</button>
+        <button class="number">7</button>
+        <button class="number">8</button>
+        <button class="number">9</button>
+
+        <button class="operator">+</button>
+        <button class="operator">-</button>
+        <button class="operator">/</button>
+        <button class="operator">*</button>
+        
+        <button class="clear">C</button>
+
+        <button class="decimal">.</button>
+
+        <button class="equals">=</button>
+    </section>
     <script src="./script.js"></script>
 </body>
 </html>
