--- a/index.html
+++ b/index.html
@@ -15,25 +15,25 @@
         <input class="maths" />
         </div>
         <div class="grid-container">
-            <div class="seven number btn">7</div>
-            <div class="eight number btn">8</div>
-            <div class="nine number btn">9</div>
-            <div class="four number btn">4</div>
-            <div class="five number btn">5</div>
-            <div class="six number btn">6</div>
-            <div class="one number btn">1</div>
-            <div class="two number btn">2</div>
-            <div class="three number btn">3</div>
-            <div class="zero number btn">0</div>
+            <button class="seven number btn">7</button>
+            <button class="eight number btn">8</button>
+            <button class="nine number btn">9</button>
+            <button class="four number btn">4</button>
+            <button class="five number btn">5</button>
+            <button class="six number btn">6</button>
+            <button class="one number btn">1</button>
+            <button class="two number btn">2</button>
+            <button class="three number btn">3</button>
+            <button class="zero number btn">0</button>
 
-            <div class="clear perform btn">C</div>
-            <div class="decimal perform btn">.</div>
+            <button class="clear perform btn">C</button>
+            <button class="decimal perform btn">.</button>
 
-            <div class="plus operator btn btn-warning">+</div>
-            <div class="minus operator btn btn-warning">-</div>
-            <div class="divide operator btn btn-warning">/</div>
-            <div class="times operator btn btn-warning">*</div>
-            <div class="equals operator btn btn-success">=</div>
+            <button class="plus operator btn">+</button>
+            <button class="minus operator btn">-</button>
+            <button class="divide operator btn">/</button>
+            <button class="times operator btn">*</button>
+            <button class="equals operator btn">=</button>
           </div>
     </section>
     <script src="./script.js"></script>
