--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h1>Calculator</h1>
     <section class="main-wrapper">
         <div class="result">
-        <input class="preview" />
-        <input class="maths" />
+            <input class="preview"/>
+            <input class="maths"/>
         </div>
         <div class="grid-container">
             <button class="seven number btn">7</button>
@@ -33,7 +33,7 @@
             <button class="minus operator btn">-</button>
             <button class="divide operator btn">/</button>
             <button class="times operator btn">*</button>
-            <button class="equals operator btn">=</button>
+            <button class="equals btn">=</button> 
           </div>
     </section>
     <script src="./script.js"></script>
