added previous calculations

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="result">
             <input class="preview"/>
             <input class="maths"/>
+            <input class="previous" />
         </div>
         <div class="grid-container">
             <button class="seven number btn">7</button>
