updated had decimal

--- a/index.html
+++ b/index.html
@@ -35,8 +35,11 @@
             <button class="divide operator btn">/</button>
             <button class="times operator btn">*</button>
             <button class="equals btn">=</button> 
-          </div>
+          </div>     
     </section>
+    <div>
+        <p class="error"></p>
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
